--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+<string name="pick_image">Pick Image</string>
+<string name="take_photo">Take Photo</string>
+<string name="image_preview_description">Image preview</string>
 </resources>
